--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.TEST_SECRET }}
 
       - name: Extract Docker metadata
         id: meta
