--- a/.github/workflows/docker-registry-cleanup.yml
+++ b/.github/workflows/docker-registry-cleanup.yml
@@ -28,4 +28,4 @@ jobs:
           owner: ${{ github.repository_owner }}
           name: ${{ env.IMAGE_NAME }}
           token: ${{ secrets.TEST_SECRET }}
-          untagged: all
+          untagged-keep-latest: 1
