--- a/.github/workflows/schedule.yaml
+++ b/.github/workflows/schedule.yaml
@@ -21,6 +21,10 @@ jobs:
           git log --after="6 months ago" > commits.txt
           wc -l <commits.txt
 
+      - uses: actions/checkout@2
+      - run: |
+          echo "Now using this repo"
+          git remote show origin
       # - uses: JasonEtco/create-an-issue@v2
       #   env:
       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
