--- a/.github/workflows/schedule.yaml
+++ b/.github/workflows/schedule.yaml
@@ -3,7 +3,7 @@ name: Check Watterott senseBox MCU Core for updates
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 * * * *'  # Check every day
+    - cron: '0 1 * * *'  # Check every day
 
 jobs:
   check-for-updates:
